Update moved imports